# chore-manager

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yml  plan.md  pyproject.toml
config/: app.example.yaml  family.example.yaml
src/chore_manager/: achievements.py  app.py  approvals.py  audit.py  config.py  db.py  history.py  models.py  routes.py  schedule.py  stats.py  theme.py
src/chore_manager/static/: app.css  tailwind.input.css  themes.css
src/chore_manager/templates/: audit.html  base.html  holidays.html  stats.html  today.html
src/chore_manager/templates/partials/: adhoc_cell.html  adjust_panel.html  avatar.html  avatar_picker.html  chore_cell.html  points_balance.html  redemption_history.html  rewards_panel.html  theme_particles.html
tests/: conftest.py  test_achievements.py  test_adjustments.py  test_approvals.py  test_audit.py  test_birthday.py  test_claim_first.py  test_history.py  test_holidays.py  test_reassignment.py  test_rollover.py  test_routes.py  test_schedule.py  test_theme.py
